Keep selective cleanup tests Java-version compatible